base-installer (1.14) UNRELEASED; urgency=low

  * Frans Pop
    - Add sanity check in postinst for empty COMPONENTS to guard against
      ugly and difficult to trace errors from debootstrap. Closes: #283510.
  * Colin Watson
    - Merge experimental kernel selection improvements branch:
      + Consolidate all the uname calls to find the kernel version into one
        place.
      + Split per-architecture kernel handling out of the postinst into one
        script per architecture, with an interface to the postinst that
        allows base-installer to pick a usable kernel even if the one it
        actually wants isn't on the CD. See kernel/README.
      + Add a test suite for kernel selection. See kernel/tests/README.
      + Make sure all the kernels displayed in
        base-installer/kernel/which-kernel are usable.
    - Please DO NOT UPLOAD this to unstable until sarge has been released.
      Use the sarge branch.
    - Use chrp 2.4 kernel on all powerpc chrp* subarchitectures, even
      chrp-rs6k. The chrp-rs6k 2.4 kernel is to be removed.
    - Fix arch_get_kernel output on s390, and explicitly disallow -s390-tape
      and -s390x (documenting why).
    - Map lasat subarchitecture to r5k-lasat flavour on mipsel.
  * Martin Michlmayr
    - Add tests for various mips and mipsel subarchitectures.

 -- Frans Pop <aragorn@tiscali.nl>  Wed,  1 Dec 2004 14:53:07 +0100

base-installer (1.13) unstable; urgency=low

  * Bdale Garbee
    - fix up hppa clause in postinst to get kernel package name right for 2.6
  * Colin Watson
    - Install 2.4.27 apus kernels.
  * Updated translations:
    - Bulgarian (bg.po) by Ognyan Kulev
    - Greek, Modern (1453-) (el.po) by Greek Translation Team
    - Finnish (fi.po) by Tapio Lehtonen
    - French (fr.po) by French Team
    - Hebrew (he.po) by Lior Kaplan
    - Hungarian (hu.po) by VEROK Istvan
    - Russian (ru.po) by Yuri Kozlov
    - Slovenian (sl.po) by Jure Čuhalev
    - Traditional Chinese (zh_TW.po) by Tetralet
