@@ -1,3 +1,3 @@
 * Use different waypoints on the progress bar for cdrom and network installs.
-* Break out arch-specfici stuff into include files or something to save
-  space.
+* Rename the debian-installer/kernel/* templates, since they're specific to
+  this package now, not globals in rootskel. I doubt anyone preseeds these.
